--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [SlateAdditionalLayoutConfig]
@@ -213,7 +213,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Mia
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -223,7 +223,7 @@ ContentBrowserTab1.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=680.000
-WindowSize=X=1283.000 Y=723.000
+WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -1295,4 +1295,7 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
 
