--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@CUA-5CD0179YC6
 LastExecutedLaunchName=CUA-5CD0179YC6
 LastExecutedPIEPreviewDevice=
@@ -168,21 +168,21 @@ LastLevel=/Game/level_test
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=
+RecentAssetEditors=PaperZDAnimBPEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=PaperZDAnimationSourceEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=PaperZDAnimationSourceEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=FlipbookEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=FlipbookEditor
 RecentAssetEditors=FlipbookEditor
-RecentAssetEditors=PaperZDAnimBPEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PaperZDAnimationSourceEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=PaperZDAnimationSourceEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PaperZDAnimBPEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -1324,9 +1324,9 @@ SubobjectEditor.TimeStamp=2024.04.16-16.58.55
 SubobjectEditor.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2024.04.16-16.58.28
 HierarchicalLODOutliner.LastCompileMethod=Unknown
-PaperZD.TimeStamp=2024.05.09-22.58.42
+PaperZD.TimeStamp=2024.05.12-11.56.48
 PaperZD.LastCompileMethod=External
-PaperZDEditor.TimeStamp=2024.05.09-22.58.45
+PaperZDEditor.TimeStamp=2024.05.12-11.56.50
 PaperZDEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2024.03.17-14.46.17
 TextureEditor.LastCompileMethod=Unknown
@@ -1358,21 +1358,21 @@ MRUItem0=/Game/level_test
 MRUItem1=/Game/charMove
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Character/BP_Pigeon
-MRUItem1=/Game/Character/Postman_Sprites/Pigeon_Idle
-MRUItem2=/Game/Character/Postman_Sprites/pigeon
-MRUItem3=/Game/Character/Postman_Sprites/Postman_Walk_W
-MRUItem4=/Game/Character/Postman_Sprites/Postman_Walk_E
-MRUItem5=/Game/Character/ABP_Postman
-MRUItem6=/Game/Character/BP_Postman
-MRUItem7=/Game/Character/AS_Postman
-MRUItem8=/Game/Character/Inout/IA_Jump
-MRUItem9=/Game/Character/AS_TopDownChar
-MRUItem10=/Game/Character/Inout/IMC_TopDown
-MRUItem11=/Game/Character/Inout/IA_Move
-MRUItem12=/Game/Character/BP_TopDownChar
-MRUItem13=/Game/Character/ABP_RopDownChar
-MRUItem14=/Game/level_test
+MRUItem0=/Game/level_test
+MRUItem1=/Game/Character/ABP_Postman
+MRUItem2=/Game/Character/BP_Postman
+MRUItem3=/Game/Character/AS_Postman
+MRUItem4=/Game/Character/Inout/IA_Jump
+MRUItem5=/Game/Character/AS_TopDownChar
+MRUItem6=/Game/Character/BP_Pigeon
+MRUItem7=/Game/Character/Postman_Sprites/Pigeon_Idle
+MRUItem8=/Game/Character/Postman_Sprites/pigeon
+MRUItem9=/Game/Character/Postman_Sprites/Postman_Walk_W
+MRUItem10=/Game/Character/Postman_Sprites/Postman_Walk_E
+MRUItem11=/Game/Character/Inout/IMC_TopDown
+MRUItem12=/Game/Character/Inout/IA_Move
+MRUItem13=/Game/Character/BP_TopDownChar
+MRUItem14=/Game/Character/ABP_RopDownChar
 MRUItem15=/Game/Character/AnimSequences/postmanIdle
 MRUItem16=/Game/GM_Base
 MRUItem17=/Paper2D/MaskedUnlitSpriteMaterial
@@ -2212,7 +2212,7 @@ RecentlyPlaced=/Game/Character/BP_TopDownChar.BP_TopDownChar;
 [DetailPropertyExpansion]
 PaperZDAnimSequence_Flipbook="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[1]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[2]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[3]\" "
 PaperZDAnimSequence="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[1]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[2]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[3]\" "
-Object="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[1]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[2]\" \"Object.AnimSequence.AnimDataSource.AnimDataSource[3]\" "
+Object=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" "
 DataAsset=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2405,12 +2405,12 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
-PaperFlipbookComponent=PaperFlipbookComponent.Materials.MaterialList
+PaperFlipbookComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 BP_TopDownChar_C=PaperFlipbookComponent.Materials.MaterialList
 CharacterMovementComponent=PaperFlipbookComponent.Materials.MaterialList
 BP_Postman_C=PaperFlipbookComponent.Materials.MaterialList
-CapsuleComponent=
+CapsuleComponent=PaperFlipbookComponent.Materials.MaterialList
 K2Node_VariableGet=PaperFlipbookComponent.Materials.MaterialList
 ABP_Postman_C=PaperFlipbookComponent.Materials.MaterialList
 PropertyWrapper=PaperFlipbookComponent.Materials.MaterialList
@@ -2692,4 +2692,8 @@ LastLogListing=BlueprintLog
 
 [DetailCategoriesAdvanced]
 BP_Postman_C.Lighting=False
+BP_Postman_C.Character Movement (General Settings)=True
+BP_Postman_C.Navigation=False
+BP_Postman_C.Collision=True
+CapsuleComponent.Collision=True
 
