FIXES FOR BUILD

--- a/PeasantPost/Config/DefaultEngine.ini
+++ b/PeasantPost/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/PrototypeLevel1_SamTest.PrototypeLevel1_SamTest
 GlobalDefaultGameMode=/Game/GM_Base.GM_Base_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
