barricades and slow

--- a/PeasantPost/Config/DefaultEngine.ini
+++ b/PeasantPost/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/PrototypeLevel1_SamTest.PrototypeLevel1_SamTest
+GameDefaultMap=/Game/Levels/Level1_LevelConstruction.Level1_LevelConstruction
 GlobalDefaultGameMode=/Game/GM_Base.GM_Base_C
+EditorStartupMap=/Game/Levels/Level1_LevelConstruction.Level1_LevelConstruction
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
