--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,6 +182,7 @@ CleanShutdown=True
 DebuggerAttached=False
 None=======
 None=======
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
@@ -211,7 +212,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Harx_Levels/UI/MainMenu.MainMenu
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -260,7 +261,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/Enemies/BaseEnemy
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Nature_Kit
+ContentBrowserTab1.SelectedPaths=/Game/Harx_Levels/UI
 None=======
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
@@ -1429,36 +1430,36 @@ MRUItem10=/Game/Levels/PrototypeLevel1
 MRUItem11=/Game/level_test2
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Nature_Kit/ground_riverEndClosed_ground_riverEndClosed
-MRUItem1=/Game/Harx_Levels/UI/Employee_Evaluation_screen
-MRUItem2=/Game/Levels/Level1_LevelConstruction
-MRUItem3=/Game/Harx_Levels/Levels/Level2_Blockout
-MRUItem4=/Game/Harx_Levels/Levels/Level3Blockout
-MRUItem5=/Game/Harx_Levels/Levels/Level1Blockout
-MRUItem6=/Game/Levels/Level1_LevelConstruction1_MiaTest
-MRUItem7=/Game/Harx_Levels/Levels/TutorialLevelBlockout1
-MRUItem8=/Game/Enemies/AI/BP_PatrolRoute
-MRUItem9=/Game/Character/BP_PostmanSam240606
-MRUItem10=/Game/Character/BP_AimingReticle
-MRUItem11=/Game/Mia/BP_Slow_Floor
-MRUItem12=/Game/Mia/BP_Blockade
-MRUItem13=/Game/Character/BP_Postman
-MRUItem14=/Game/Character/BP_Pigeon
-MRUItem15=/Game/Mia/BP_Delivery
-MRUItem16=/Game/Character/BP_Parcel
-MRUItem17=/Game/Mia/BP_Lanes
-MRUItem18=/Game/Mia/BP_CartMovement
-MRUItem19=/Game/Levels/PrototypeLevel1_SamTest
-MRUItem20=/Game/Levels/PrototypeLevel1
-MRUItem21=/Game/Character/ABP_Postman
-MRUItem22=/Game/Character/BP_TopDownChar
-MRUItem23=/Game/Character/Postman_Sprites/reticle_Sprite
-MRUItem24=/Game/Character/Postman_Sprites/reticle_Flipbook
-MRUItem25=/Game/Enemies/AI/Tasks/BTT_EquipWeapon
-MRUItem26=/Game/Enemies/AI/Tasks/BTT_UnequipWeapon
-MRUItem27=/Game/Enemies/Enemy_Basic/BP_EnemyBasicChar
-MRUItem28=/Game/Enemies/AI/Tasks/BTT_MoveAlongPatrolRoute
-MRUItem29=/Game/Enemies/AI/Decorators/BTD_HasWeapon
+MRUItem0=/Game/Harx_Levels/UI/MainMenu
+MRUItem1=/Game/Assets/Nature_Kit/ground_riverEndClosed_ground_riverEndClosed
+MRUItem2=/Game/Harx_Levels/UI/Employee_Evaluation_screen
+MRUItem3=/Game/Levels/Level1_LevelConstruction
+MRUItem4=/Game/Harx_Levels/Levels/Level2_Blockout
+MRUItem5=/Game/Harx_Levels/Levels/Level3Blockout
+MRUItem6=/Game/Harx_Levels/Levels/Level1Blockout
+MRUItem7=/Game/Levels/Level1_LevelConstruction1_MiaTest
+MRUItem8=/Game/Harx_Levels/Levels/TutorialLevelBlockout1
+MRUItem9=/Game/Enemies/AI/BP_PatrolRoute
+MRUItem10=/Game/Character/BP_PostmanSam240606
+MRUItem11=/Game/Character/BP_AimingReticle
+MRUItem12=/Game/Mia/BP_Slow_Floor
+MRUItem13=/Game/Mia/BP_Blockade
+MRUItem14=/Game/Character/BP_Postman
+MRUItem15=/Game/Character/BP_Pigeon
+MRUItem16=/Game/Mia/BP_Delivery
+MRUItem17=/Game/Character/BP_Parcel
+MRUItem18=/Game/Mia/BP_Lanes
+MRUItem19=/Game/Mia/BP_CartMovement
+MRUItem20=/Game/Levels/PrototypeLevel1_SamTest
+MRUItem21=/Game/Levels/PrototypeLevel1
+MRUItem22=/Game/Character/ABP_Postman
+MRUItem23=/Game/Character/BP_TopDownChar
+MRUItem24=/Game/Character/Postman_Sprites/reticle_Sprite
+MRUItem25=/Game/Character/Postman_Sprites/reticle_Flipbook
+MRUItem26=/Game/Enemies/AI/Tasks/BTT_EquipWeapon
+MRUItem27=/Game/Enemies/AI/Tasks/BTT_UnequipWeapon
+MRUItem28=/Game/Enemies/Enemy_Basic/BP_EnemyBasicChar
+MRUItem29=/Game/Enemies/AI/Tasks/BTT_MoveAlongPatrolRoute
 
 [DetailCategories]
 DirectionalLight.TransformCommon=True
@@ -3798,6 +3799,53 @@ PostProcessVolume.Replication=True
 PostProcessVolume.HLOD=True
 PostProcessVolume.Networking=True
 PostProcessVolume.Actor=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Rendering=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Rendering=True
+Button.Navigation=True
+Button.Localization=True
+Level1_LevelConstruction_C.Replication=True
+Level1_LevelConstruction_C.Tick=True
+Level1_LevelConstruction_C.Actor=True
+Level1_LevelConstruction_C.HLOD=True
+Level1_LevelConstruction_C.Input=True
+Level1_LevelConstruction_C.Physics=True
+Level1_LevelConstruction_C.WorldPartition=True
+Level1_LevelConstruction_C.Events=True
+Button.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
@@ -4176,6 +4224,8 @@ None=======
 /Game/Levels/PrototypeLevel1_SamTest_BuiltData.PrototypeLevel1_SamTest_BuiltData=0
 /Game/Harx_Levels/UI/Employee_Evaluation_screen.Employee_Evaluation_screen=0
 /Game/Assets/Nature_Kit/ground_riverEndClosed_ground_riverEndClosed.ground_riverEndClosed_ground_riverEndClosed=0
+/Game/Levels/Level1_LevelConstruction.Level1_LevelConstruction:PersistentLevel.Level1_LevelConstruction=0
+/Game/Harx_Levels/UI/MainMenu.MainMenu=0
 
 [PluginBrowser]
 InstalledPlugins=PaperZD
@@ -4552,6 +4602,17 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorGamma\" \"Ob
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
+Image="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+CanvasPanel="\"Object\" "
+PanelWidget="\"Object\" "
+Button="\"Object\" "
+ContentWidget="\"Object\" "
+MainMenu_C="\"Object\" "
+UserWidget="\"Object\" "
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
@@ -4853,6 +4914,8 @@ InstancedFoliageActor=PaperFlipbookComponent.Materials.MaterialList,PaperFlipboo
 SplineComponent=PaperFlipbookComponent.Materials.MaterialList,PaperFlipbookComponent.TransformCommon.Transform,PaperFlipbookComponent.Physics.ConstraintsGroup,PaperFlipbookComponent.Collision.Collision,PlayerStart.TransformCommon.Transform,CapsuleComponent.Collision.Collision,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,BP_EnemyBase_Char_C.Collision.Collision,BP_EnemyBasicChar_C.Physics.ConstraintsGroup,BP_EnemyBasicChar_C.TransformCommon.Transform,BP_EnemyBasicChar_C.Materials.MaterialList,BP_EnemyBasicChar_C.Collision.Collision,BP_Parcel_C.Physics.ConstraintsGroup,BP_Postman_C.Collision.Collision,BP_AimingReticle_C.TransformCommon.Transform,BP_AimingReticle_C.Physics.ConstraintsGroup,BP_AimingReticle_C.Collision.Collision,BlockingVolume.Collision.Collision,BoxComponent.Collision.Collision,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EQS_TestingPawn_C.TransformCommon.Transform,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Sprite,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 RectLight=PaperFlipbookComponent.Materials.MaterialList,PaperFlipbookComponent.TransformCommon.Transform,PaperFlipbookComponent.Physics.ConstraintsGroup,PaperFlipbookComponent.Collision.Collision,PlayerStart.TransformCommon.Transform,CapsuleComponent.Collision.Collision,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,BP_EnemyBase_Char_C.Collision.Collision,BP_EnemyBasicChar_C.Physics.ConstraintsGroup,BP_EnemyBasicChar_C.TransformCommon.Transform,BP_EnemyBasicChar_C.Materials.MaterialList,BP_EnemyBasicChar_C.Collision.Collision,BP_Parcel_C.Physics.ConstraintsGroup,BP_Postman_C.Collision.Collision,BP_AimingReticle_C.TransformCommon.Transform,BP_AimingReticle_C.Physics.ConstraintsGroup,BP_AimingReticle_C.Collision.Collision,BlockingVolume.Collision.Collision,BoxComponent.Collision.Collision,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EQS_TestingPawn_C.TransformCommon.Transform,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Sprite,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
+MainMenu_C=
+PlayerController=PaperFlipbookComponent.Materials.MaterialList,PaperFlipbookComponent.TransformCommon.Transform,PaperFlipbookComponent.Physics.ConstraintsGroup,PaperFlipbookComponent.Collision.Collision,PlayerStart.TransformCommon.Transform,CapsuleComponent.Collision.Collision,CapsuleComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,BP_EnemyBase_Char_C.Collision.Collision,BP_EnemyBasicChar_C.Physics.ConstraintsGroup,BP_EnemyBasicChar_C.TransformCommon.Transform,BP_EnemyBasicChar_C.Materials.MaterialList,BP_EnemyBasicChar_C.Collision.Collision,BP_Parcel_C.Physics.ConstraintsGroup,BP_Postman_C.Collision.Collision,BP_AimingReticle_C.TransformCommon.Transform,BP_AimingReticle_C.Physics.ConstraintsGroup,BP_AimingReticle_C.Collision.Collision,BlockingVolume.Collision.Collision,BoxComponent.Collision.Collision,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EQS_TestingPawn_C.TransformCommon.Transform,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Sprite,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
