--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -4226,6 +4226,7 @@ None=======
 
 [PluginBrowser]
 InstalledPlugins=PaperZD
+InstalledPlugins=VisualStudioTools
 InstalledPlugins=WMFCodecs
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
