--- a/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
@@ -1,7 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
 Paths=%GAMEDIR%Content
-<<<<<<< Updated upstream
 Paths=../../../Engine/Plugins/TraceUtilities/Content
 Paths=../../../Engine/Plugins/Bridge/Content
 Paths=../../../Engine/Plugins/Animation/ControlRig/Content
@@ -13,7 +12,6 @@ Paths=../../../Engine/Plugins/Animation/ACLPlugin/Content
 Paths=../../../Engine/Plugins/Runtime/GeometryProcessing/Content
 Paths=../../../Engine/Plugins/Media/MediaPlate/Content
 Paths=../../../Engine/Plugins/Runtime/MeshModelingToolset/Content
-=======
 Paths=../../../Engine/Plugins/Bridge/Content
 Paths=../../../Engine/Plugins/TraceUtilities/Content
 Paths=../../../Engine/Plugins/Editor/BlueprintHeaderView/Content
@@ -49,12 +47,10 @@ Paths=../../../Engine/Plugins/Runtime/AudioWidgets/Content
 Paths=../../../Engine/Plugins/Runtime/GeometryProcessing/Content
 Paths=../../../Engine/Plugins/Runtime/MeshModelingToolset/Content
 Paths=../../../Engine/Plugins/Runtime/Metasound/Content
->>>>>>> Stashed changes
 Paths=../../../Engine/Plugins/Runtime/ResonanceAudio/Content
 Paths=../../../Engine/Plugins/Runtime/RigVM/Content
 Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/Runtime/WaveTable/Content
-<<<<<<< Updated upstream
 Paths=../../../Engine/Plugins/Runtime/Metasound/Content
 Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 Paths=../../../Engine/Plugins/Enterprise/DatasmithContent/Content
@@ -85,6 +81,7 @@ Paths=../../../Engine/Plugins/Experimental/ToolPresets/Content
 Paths=../../../Engine/Plugins/Marketplace/PaperZD/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
+None=======
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
@@ -111,8 +108,7 @@ bShareKnownNodesWithActiveConnections=False
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
-
-=======
+None=======
 Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Developer/AnimationSharing/Content
@@ -120,4 +116,3 @@ Paths=../../../Engine/Plugins/Interchange/Runtime/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 
->>>>>>> Stashed changes
