--- a/PeasantPost/Saved/Config/WindowsEditor/GameUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/GameUserSettings.ini
@@ -1,4 +1,3 @@
-<<<<<<< Updated upstream
 [/Script/Engine.GameUserSettings]
 bUseVSync=False
 bUseDynamicResolution=False
@@ -27,6 +26,5 @@ LastGPUBenchmarkResult=-1.000000
 LastGPUBenchmarkMultiplier=1.000000
 bUseHDRDisplayOutput=False
 HDRDisplayOutputNits=1000
-=======
->>>>>>> Stashed changes
+None=======
 
