--- a/PeasantPost/Config/DefaultEngine.ini
+++ b/PeasantPost/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Level1_LevelConstruction.Level1_LevelConstruction
+GameDefaultMap=/Game/Harx_Levels/UI/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/GM_Base.GM_Base_C
-EditorStartupMap=/Game/Levels/Level1_LevelConstruction.Level1_LevelConstruction
+EditorStartupMap=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION.NEWLEVELCONSTRUCTION
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
