--- a/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
@@ -116,3 +116,11 @@ Paths=../../../Engine/Plugins/Interchange/Runtime/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
