--- a/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
@@ -75,12 +75,6 @@ TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbn
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
+FlipNormalMapGreenChannel=False
+None=======
 
